fix: another round of pic alignment

--- a/src/App.css
+++ b/src/App.css
@@ -93,6 +93,7 @@
 
 .FooterItem {
   display: flex;
+  flex-direction: row;
   max-width: 100%;
   padding-left: 2.5vw;
   padding-right: 2.5vw;
@@ -170,7 +171,7 @@
   align-items: center;
   flex: 1;
   min-width: 450px;
-  height: auto;
+  height: 42vmin;
   padding-top: 1vh;
   padding-bottom: 1vh;
 }
@@ -184,9 +185,10 @@
 }
 
 .soundPic {
+  display: flex;
+  flex-direction: column;
   width: 100%;
-  /* max-width: 70%; */
-  height: auto;
+  height: 100%;
 }
 
 .VideoDetailsContainer {
@@ -206,6 +208,7 @@
   width: 4vmin;
 }
 
+/* font-size ------------------------------------- */
 
 .LogoHeader {
   font-size: 2.4vmin;
@@ -245,6 +248,3 @@
 .helloCta {
   font-size: 3vmin;
 }
-
-
-/* font-weight ------------------------------------- */
